# OTX-Meson-Testing

./: .gitignore  README.md  meson.build
Onethinx_Creator.cydsn/: Onethinx_Creator.cyfit  Onethinx_Creator.rpt  Onethinx_Creator_timing.html  headerIncludeDirs.txt  sourceFiles.txt
Onethinx_Creator.cydsn/Export/: PSoCCreatorExportIDECortexM0p.xml  PSoCCreatorExportIDECortexM4.xml
source/: main.c  new.h
source/OnethinxCore/: LoRaWAN_keys.h  OnethinxCore01.h
